tests/snapshots/snapshots__budget_superstruct_src_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1983 tokens)

error.ts
     5→export type Failure …
    16→/**
    17→ * `StructError` objects are thrown (or returned) when validation fails.
    18→ *
    19→ * Validation logic is design to exit early for maximum performance. The error
    20→ * represents the first error encountered during validation. For more detail,
    21→ * the `error.failures` property is a generator function that can be run to
    22→ * continue validation and receive all the failures in the data.
    23→ */
    24→
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
    36→    let cached: Array<Failure> | undefined
    37→    const { message, explanation, ...rest } = failure
    38→    const { path } = failure
    39→    const msg =
      →    …

struct.ts
     1→import { toFailures, shiftIterator, StructSchema, run } from './utils.js'
     2→import { StructError, Failure } from './error.js'
     4→/**
     5→ * `Struct` objects encapsulate the validation logic for a specific type of
     6→ * values. Once constructed, you use the `assert`, `is` or `validate` helpers to
     7→ * validate unknown input data against the struct.
     8→ */
     9→
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    20→  ) => Iterable<[string | number, unknown, Struct<any> | Struct<never>]>
    21→
    22→  constructor(props: {
    23→    type: string
    24→    schema: S
    25→    coercer?: Coercer
    26→    validator?: Validator
    27→    refiner?: Refiner<T>
    28→    entries?: Struct<T, S>['entries']
    29→  }) {
    30→    const {
    31→      type,
    32→      schema,
    33→      validator,
      →      …
    67→  assert …
    75→  create …
    83→  is …
    93→  mask …
   107→  validate …
   123→export function assert …
   139→export function create …
   157→export function mask …
   175→export function is …
   185→export function validate …
   221→export type Context …
   231→export type Infer …
   237→export type Describe …
   243→export type Result …
   253→export type Coercer …
   259→export type Validator …
   266→export type Refiner …

structs/coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js …
     2→import { isPlainObject } from '../utils.js …
     3→import { string, unknown } from './types.js …
    16→export function coerce …
    38→export function defaulted …
    79→export function trimmed …

structs/refinements.ts
     1→import { Struct, Refiner } from '../struct.js …
     2→import { toFailures } from '../utils.js …
     8→export function empty …
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    22→  if (value instanceof Map || value instanceof Set) {
    23→    return value.size
    24→  } else {
    25→    return value.length
    26→  }
    27→}
    33→export function max …
    55→export function min …
    77→export function nonempty …
    93→export function pattern …
   109→export function size …
   146→export function refine …

structs/types.ts
     1→import { Infer, Struct } from '../struct.js …
     2→import { define } from './utilities.js …
     3→import { …
    19→export function any …
    33→export function array<T extends Struct<any>>(Element?: T): any {
    60→export function bigint …
    70→export function boolean …
    83→export function date …
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   131→export function func …
   144→export function instance …
   159→export function integer …
   172→export function intersection …
   204→export function literal<T>(constant: T): any {
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   258→export function never …
   266→export function nullable …
   278→export function number …
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   351→export function optional …
   367→export function record …
   402→export function regexp …
   415→export function set<T>(Element?: Struct<T>): any {
   442→export function string …
   456→export function tuple …
   492→export function type …
   522→export function union …
   574→export function unknown …

structs/utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js …
     2→import { …
     8→import { object, optional, type } from './types.js …
    60→export function assign(...Structs: Struct<any>[]): any {
    71→export function define …
    80→export function deprecated …
   106→export function dynamic …
   140→export function lazy …
   171→export function omit …
   197→export function partial …
   221→export function pick …
   247→export function struct …

utils.ts
     1→import { Struct, Infer, Result, Context, Describe } from './struct.js'
     2→import { Failure } from './error.js'
     4→/**
     5→ * Check if a value is an iterator.
     6→ */
     7→
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
     9→  return isObject(x) && typeof x[Symbol.iterator] === 'function'
    10→}
    16→export function isObject …
    24→export function isNonArrayObject …
    32→export function isPlainObject …
    45→export function print …
    58→export function shiftIterator …
    67→export function toFailure …
   202→export type UnionToIntersection …
   212→export type Assign …
   218→export type EnumSchema …
   227→export type IsMatch …
   233→export type IsExactMatch …
   242→export type IsRecord …
   251→export type IsTuple …
   267→export type IsUnion …
   277→export type ObjectSchema …
   283→export type ObjectType …
   291→export type OmitBy …
   300→export type Optionalize …
   307→export type PartialObjectSchema …
   315→export type PickBy …
   324→export type Simplify …
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   334→export type StructSchema …
   379→export type TupleSchema …
   385→export type AnyStruct …
   394→export type InferStructTuple …
   402→type _InferTuple<
   403→  Tuple extends AnyStruct[],
   404→  Length extends number,
   405→  Accumulated extends unknown[],
   406→  Index extends number = Accumulated['length'],
   407→> = Index extends Length
   408→  ? Accumulated
   409→  : _InferTuple<Tuple, Length, [...Accumulated, Infer<Tuple[Index]>]>
