tests/snapshots/snapshots__budget_superstruct_src_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4027 tokens)

error.ts
     2→ * A `StructFailure` represents a single specific failure in validation.
     5→export type Failure = {
     6→  value: any
     7→  key: any
      →  …
    17→ * `StructError` objects are thrown (or returned) when validation fails.
    18→ *
    19→ * Validation logic is design to exit early for maximum performance. The error
    20→ * represents the first error encountered during validation. For more detail,
    21→ * the `error.failures` property is a generator function that can be run to
    22→ * continue validation and receive all the failures in the data.
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
    36→    let cached: Array<Failure> | undefined
    37→    const { message, explanation, ...rest } = failure
    38→    const { path } = failure
    39→    const msg =
      →    …

struct.ts
     1→import { toFailures, shiftIterator, StructSchema, run } from './utils.js'
     2→import { StructError, Failure } from './error.js'
     5→ * `Struct` objects encapsulate the validation logic for a specific type of
     6→ * values. Once constructed, you use the `assert`, `is` or `validate` helpers to
     7→ * validate unknown input data against the struct.
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    20→  ) => Iterable<[string | number, unknown, Struct<any> | Struct<never>]>
    21→
    22→  constructor(props: {
    23→    type: string
    24→    schema: S
    25→    coercer?: Coercer
    26→    validator?: Validator
    27→    refiner?: Refiner<T>
    28→    entries?: Struct<T, S>['entries']
    29→  }) {
    30→    const {
    31→      type,
    32→      schema,
    33→      validator,
    34→      refiner,
      →      …
    67→  assert …
    75→  create …
    83→  is …
    93→  mask …
   107→  validate …
   123→export function assert …
   139→export function create …
   157→export function mask …
   175→export function is …
   185→export function validate …
   214→ * A `Context` contains information about the current location of the
   215→ * validation inside the initial input value. It also carries `mask`
   216→ * since it's a run-time flag determining how the validation was invoked
   217→ * (via `mask()` or via `validate()`), plus it applies recursively
   218→ * to all of the nested structs.
   221→export type Context = {
   222→  branch: Array<any>
      →  …
   228→ * A type utility to extract the type from a `Struct` class.
   231→export type Infer<T extends Struct<any, any>> = T['TYPE']
   234→ * A type utility to describe that a struct represents a TypeScript type.
   237→export type Describe<T> = Struct<T, StructSchema<T>>
   240→ * A `Result` is returned from validation functions.
   243→export type Result =
   244→  | boolean
   245→  | string
   246→  | Partial<Failure>
   247→  | Iterable<boolean | string | Partial<Failure>>
   250→ * A `Coercer` takes an unknown value and optionally coerces it.
   253→export type Coercer<T = unknown> = (value: T, context: Context) => unknown
   256→ * A `Validator` takes an unknown value and validates it.
   259→export type Validator = (value: unknown, context: Context) => Result
   262→ * A `Refiner` takes a value of a known type and validates it against a further
   263→ * constraint.
   266→export type Refiner<T> = (value: T, context: Context) => Result

structs/coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js'
     2→import { isPlainObject } from '../utils.js'
     3→import { string, unknown } from './types.js'
     6→ * Augment a `Struct` to add an additional coercion step to its input.
     7→ *
     8→ * This allows you to transform input data before validating it, to increase the
     9→ * likelihood that it passes validation—for example for default values, parsing
    10→ * different formats, etc.
    11→ *
    12→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    13→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    16→export function coerce<T, S, C>(
    17→  struct: Struct<T, S>,
    18→  condition: Struct<C, any>,
    19→  coercer: Coercer<C>
    20→): Struct<T, S> {
    21→  return new Struct({
    22→    ...struct,
    23→    coercer: (value, ctx) => {
      →    …
    32→ * Augment a struct to replace `undefined` values with a default.
    33→ *
    34→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    35→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    38→export function defaulted<T, S>(
    39→  struct: Struct<T, S>,
    40→  fallback: any,
    41→  options: {
    42→    strict?: boolean
    43→  } = {}
    44→): Struct<T, S> {
    45→  return coerce(struct, unknown(), (x) => {
    46→    const f = typeof fallback === 'function' ? fallback() : fallback
    47→
      →…
    73→ * Augment a struct to trim string inputs.
    74→ *
    75→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    76→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    79→export function trimmed<T, S>(struct: Struct<T, S>): Struct<T, S> {
    80→  return coerce(struct, string(), (x) => x.trim())
    81→}

structs/refinements.ts
     1→import { Struct, Refiner } from '../struct.js'
     2→import { toFailures } from '../utils.js'
     5→ * Ensure that a string, array, map, or set is empty.
     8→export function empty<
     9→  T extends string | any[] | Map<any, any> | Set<any>,
    10→  S extends any,
    11→>(struct: Struct<T, S>): Struct<T, S> {
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    30→ * Ensure that a number or date is below a threshold.
    33→export function max<T extends number | Date, S extends any>(
    34→  struct: Struct<T, S>,
    35→  threshold: T,
    36→  options: {
    37→    exclusive?: boolean
    38→  } = {}
    39→): Struct<T, S> {
    52→ * Ensure that a number or date is above a threshold.
    55→export function min<T extends number | Date, S extends any>(
    56→  struct: Struct<T, S>,
    57→  threshold: T,
    58→  options: {
    59→    exclusive?: boolean
    60→  } = {}
    61→): Struct<T, S> {
    74→ * Ensure that a string, array, map or set is not empty.
    77→export function nonempty<
    78→  T extends string | any[] | Map<any, any> | Set<any>,
    79→  S extends any,
    80→>(struct: Struct<T, S>): Struct<T, S> {
    90→ * Ensure that a string matches a regular expression.
    93→export function pattern<T extends string, S extends any>(
    94→  struct: Struct<T, S>,
    95→  regexp: RegExp
    96→): Struct<T, S> {
   106→ * Ensure that a string, array, number, date, map, or set has a size (or length, or time) between `min` and `max`.
   109→export function size<
   110→  T extends string | number | Date | any[] | Map<any, any> | Set<any>,
   111→  S extends any,
   112→>(struct: Struct<T, S>, min: number, max: number = min): Struct<T, S> {
   139→ * Augment a `Struct` to add an additional refinement to the validation.
   140→ *
   141→ * The refiner function is guaranteed to receive a value of the struct's type,
   142→ * because the struct's existing validation will already have passed. This
   143→ * allows you to layer additional validation on top of existing structs.
   146→export function refine<T, S>(
   147→  struct: Struct<T, S>,
   148→  name: string,
   149→  refiner: Refiner<T>
   150→): Struct<T, S> {

structs/types.ts
     1→import { Infer, Struct } from '../struct.js …
     2→import { define } from './utilities.js …
     3→import { …
    19→export function any …
    33→export function array<T extends Struct<any>>(Element?: T): any {
    60→export function bigint …
    70→export function boolean …
    83→export function date …
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   131→export function func …
   144→export function instance …
   159→export function integer …
   172→export function intersection …
   204→export function literal<T>(constant: T): any {
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   258→export function never …
   266→export function nullable …
   278→export function number …
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   351→export function optional …
   367→export function record …
   402→export function regexp …
   415→export function set<T>(Element?: Struct<T>): any {
   442→export function string …
   456→export function tuple …
   492→export function type …
   522→export function union …
   574→export function unknown …

structs/utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js …
     2→import { …
     8→import { object, optional, type } from './types.js …
    60→export function assign(...Structs: Struct<any>[]): any {
    61→  const isType = Structs[0].type === 'type'
    62→  const schemas = Structs.map((s) => s.schema)
    63→  const schema = Object.assign({}, ...schemas)
    64→  return isType ? type(schema) : object(schema)
    65→}
    68→ * Define a new struct type with a custom validation function.
    71→export function define<T>(name: string, validator: Validator): Struct<T, null> {
    76→ * Create a new struct based on an existing struct, but the value is allowed to
    77→ * be `undefined`. `log` will be called if the value is not `undefined`.
    80→export function deprecated<T>(
    81→  struct: Struct<T>,
    82→  log: (value: unknown, ctx: Context) => void
    83→): Struct<T> {
    99→ * Create a struct with dynamic validation logic.
   100→ *
      → …
   106→export function dynamic<T>(
   107→  fn: (value: unknown, ctx: Context) => Struct<T, any>
   108→): Struct<T, null> {
   132→ * Create a struct with lazily evaluated validation logic.
   133→ *
      → …
   140→export function lazy<T>(fn: () => Struct<T, any>): Struct<T, null> {
   165→ * Create a new struct based on an existing object struct, but excluding
   166→ * specific properties.
      → …
   171→export function omit<S extends ObjectSchema, K extends keyof S>(
   172→  struct: Struct<ObjectType<S>, S>,
   173→  keys: K[]
   174→): Struct<ObjectType<Omit<S, K>>, Omit<S, K>> {
   191→ * Create a new struct based on an existing object struct, but with all of its
   192→ * properties allowed to be `undefined`.
      → …
   197→export function partial<S extends ObjectSchema>(
   198→  struct: Struct<ObjectType<S>, S> | S
   199→): Struct<ObjectType<PartialObjectSchema<S>>, PartialObjectSchema<S>> {
   215→ * Create a new struct based on an existing object struct, but only including
   216→ * specific properties.
      → …
   221→export function pick<S extends ObjectSchema, K extends keyof S>(
   222→  struct: Struct<ObjectType<S>, S>,
   223→  keys: K[]
   224→): Struct<ObjectType<Pick<S, K>>, Pick<S, K>> {
   242→ * Define a new struct type with a custom validation function.
   243→ *
      → …
   247→export function struct<T>(name: string, validator: Validator): Struct<T, null> {

utils.ts
     1→import { Struct, Infer, Result, Context, Describe } from './struct.js'
     2→import { Failure } from './error.js'
     5→ * Check if a value is an iterator.
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
     9→  return isObject(x) && typeof x[Symbol.iterator] === 'function'
    10→}
    13→ * Check if a value is a plain object.
    16→export function isObject(x: unknown): x is object {
    21→ * Check if a value is a non-array object.
    24→export function isNonArrayObject(x: unknown): x is object {
    29→ * Check if a value is a plain object.
    32→export function isPlainObject(x: unknown): x is { [key: string]: any } {
    42→ * Return a value as a printable string.
    45→export function print(value: any): string {
    54→ * Shifts (removes and returns) the first value from the `input` iterator.
    55→ * Like `Array.prototype.shift()` but for an `Iterator`.
    58→export function shiftIterator<T>(input: Iterator<T>): T | undefined {
    64→ * Convert a single validation result to a failure.
    67→export function toFailure<T, S>(
    68→  result: string | boolean | Partial<Failure>,
    69→  context: Context,
    70→  struct: Struct<T, S>,
    71→  value: any
    72→): Failure | undefined {
   202→export type UnionToIntersection …
   212→export type Assign …
   218→export type EnumSchema …
   227→export type IsMatch …
   233→export type IsExactMatch …
   242→export type IsRecord …
   251→export type IsTuple …
   267→export type IsUnion …
   277→export type ObjectSchema …
   283→export type ObjectType …
   291→export type OmitBy …
   300→export type Optionalize …
   307→export type PartialObjectSchema …
   315→export type PickBy …
   324→export type Simplify …
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   334→export type StructSchema …
   379→export type TupleSchema …
   385→export type AnyStruct …
   394→export type InferStructTuple …
   402→type _InferTuple …
